--- a/packages/SystemUI/res/values/parasite_colors.xml
+++ b/packages/SystemUI/res/values/parasite_colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="reticker_background_color">@android:color/system_neutral1_50</color>
+    <color name="reticker_background_color">@android:color/system_neutral1_0</color>
 </resources>
